# bookstore

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
tests/: test_order.py  test_product.py  test_product_serializer.py
tests/test_models/: test_category.py  test_order.py
tests/test_serializers/: test_cetegory_serializer.py  test_order_serializer.py  test_product_serializer.py
tests/test_viewsets/: test_category_viewset.py  test_order_viewset.py  test_product_viewset.py
